--- a/index.section__popular-items.partial.html
+++ b/index.section__popular-items.partial.html
@@ -165,50 +165,7 @@
             <button class="about-delivery-btn">Shop Now</button>
         </div>
     </section>
-    <section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+    <section class="block__">
 
     </section>
 </main>
