--- a/index.section__popular-items.partial.html
+++ b/index.section__popular-items.partial.html
@@ -165,9 +165,52 @@
             <button class="about-delivery-btn">Shop Now</button>
         </div>
     </section>
-    <section class="block__">
-
-    </section>
+    <div class="section__bestseller-2">
+        <div class="section__bestseller-2__block-1">   
+            <h2 class="section__bestseller-2__block__name-of-gadget">
+                Wireless Sale
+            </h2>
+            <p class="section__bestseller-2__block__p">
+                Multipurpose assistance for online.
+            </p>
+            <section class="countdown">
+                <div class="countdown__item">
+                  <span class="countdown__number" id="days">000</span>
+                  <span class="countdown__label">Days</span>
+                </div>
+                <div class="countdown__item">
+                  <span class="countdown__number" id="hours">00</span>
+                  <span class="countdown__label">Hours</span>
+                </div>
+                <div class="countdown__item">
+                  <span class="countdown__number" id="minutes">00</span>
+                  <span class="countdown__label">Min</span>
+                </div>
+                <div class="countdown__item">
+                  <span class="countdown__number" id="seconds">00</span>
+                  <span class="countdown__label">Sec</span>
+                </div>
+              </section>
+        </div>
+        <div class="section__bestseller-2__block-2">
+            <div class="section__bestseller-2__block-2__content">
+                <h4 class="bestseller-blue">BEST SELLER</h4>
+                <h2 class="section__bestseller-2__block__name-of-gadget">
+                    KeyGo X104 <br>only for <span style="color: #ff8000;">$259</span> <span style="text-decoration: line-through; color: grey; font-size: 24px;">280</span>
+                </h2>
+                <p class="section__bestseller-2__block__p">
+                    Multipurpose assistance for online.
+                </p>
+            </div>
+        </div>
+        <div class="section__bestseller-2__block-3">
+            <h4 class="bestseller-blue" style="color: #ff8000;">BEST SELLER</h4>
+            <h2 class="section__bestseller-2__block__name-of-gadget">
+                Monitor NovaScreen
+            </h2>
+            <p class="section__bestseller-2__block__p">starting from <span class="bestseller-blue" style="font-weight: 600;">$199.99</span></p>
+        </div>                                                                                                                                                                                                                                                                                                
+    </div>
 </main>
 <script>
     window.addEventListener('load', function() {
